# bung-hunting

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  scratch_scope_fix_test.txt
api/: browser_client.py  config.py  llm_router.py  main.py  orchestrator.py  scan_status.py  schemas.py  scope.py  sow.py  tool_router.py
api/agents/: adaptive_agent.py  coding_agent.py  pentest_agent.py
api/routes/: scan.py
cli/: client.py  launch.py  main.py  report.py  server.py
docker/: .env.example  docker-compose.yml
docker/tools/browser/: Dockerfile  start.sh
docker/tools/ffuf/: Dockerfile  wordlist.txt
docs/: AGENTS.md  ARCHITECTURE.md  GETTING_STARTED.md  LINUX.md  MVP.md  REVIEW.md  ROADMAP.md  SECURITY_AND_AUTHORIZATION.md  TECH_STACK.md  VISION.md  WINDOWS.md
memory/: db.py  models.py  repository.py
tests/: test_adaptive_agent.py  test_browser_tool.py  test_llm_router.py  test_scan.py  test_scan_tools.py  test_sow.py
