[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scorpion"
version = "2.0.0"
description = "Scorpion v2 - local AI security platform (Agent Core, CLI, Tool Orchestrator)"
requires-python = ">=3.11"

[project.scripts]
scorpion = "cli.main:app"

[tool.setuptools]
packages = ["api", "api.agents", "api.routes", "cli", "memory"]
